--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="test2.js"></script>
   </body>
 </html>
