--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <section class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div class="card">
+      <article class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
-        <div class="card-body">
+        <article class="card-body">
           <textarea
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
-        </div>
+        </article>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
-      </div>
-    </div>
+      </article>
+    </section>
     <script src="./assets/script.js"></script>
   </body>
 </html>
